# playlist_curator

./: .gitignore  LICENSE  README.md  compose.yaml  config.py  main.py  pyproject.toml  requirements.txt  view_proposal.drawio  wsgi.py
.github/workflows/: laravel.yml  python-app.yml
app/: data_store.py  main.py  response_clean.py  spotify_scopes_enum.py  spotipy_requests.py  utils.py
app/dashboard/: dashboard.py  data_show.py  server.py
app/data/: audio_analysis_df.pkl  recent_tracks_130923.pkl  recently_played_170923.json  recently_played_190923.json  saved_tracks.json  saved_tracks.pkl  spotify_genre_seeds.json
backend_service/: main.py
backend_service/plotly_flask/: __init__.py  forms.py
backend_service/tests/: test_fastapi_spotipy.py
curator_service/: Dockerfile  main.py  pyproject.toml
curator_service/app/api/: spotify.py  spotify_authenticate.py
curator_service/app/models/: spotify.py
curator_service/app/services/: spotify_client.py
curator_service/tests/: test_basic_curator_func.py  test_fastapi_spotipy.py
data/: audio_features.pkl  my_cleaned_playlist.pkl  my_cleaned_playlists.json  my_playlists.json  my_presentable_playlists.pkl  playlist_id_map.json  playlist_id_map.pkl  recent_tracks.json  recently_played_170923.pkl  recently_played_190923.json  recommended.json
docs/: presentation_pages.drawio  presentation_pages_with_images.drawio  spotify_recommendation_notes.md  view_proposal.drawio
docs/notebooks/: playlist_object_clean.ipynb  playlist_show.ipynb
frontend_service/: README.md  index.html  package-lock.json  package.json
frontend_service/src/: App.vue
k8s/: playlist_curator.yaml
laravel_backend/: composer.json  curator
laravel_backend/config/: app.php  database.php  services.php
laravel_backend/routes/: api.php  web.php
notebooks/: audio_features.ipynb  clean_recommendations.ipynb  data_clean.ipynb  playlist_object_clean.ipynb  playlist_show.ipynb
plotly_flask/: __init__.py  forms.py  routes.py
plotly_flask/models/: genre_logic.py  (+5 more)
tests/: test_fastapi_spotipy.py  test_playlist_logic.py  test_spotipy.py  test_utils.py
ui/: Dockerfile  package-lock.json  package.json
(+61 files in other folders)
