[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend_service"]

[project]
name = "curator"
version = "0.0.2"
requires-python = ">=3.11, <3.13" # temporary version cap
dependencies = [
  "python-dotenv >= 1.0.0",
  "spotipy >= 2.23.0",
  "fastapi >= 0.111.0",
  "pandas >= 2.1.0"
]

[project.optional-dependencies]
dev = [
    "ipykernel >= 6.25.2",
    "pytest >= 7.4.2"
]
